--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,7 +14,15 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-          
+
+      - name: Cache node_modules
+        uses: actions/cache@v1
+        with:
+          path: node_modules
+          key: ${{ runner.os }}-node_modules-${{ hashFiles('package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node_modules-
+
       - name: Convert the YAML to GeoJSON
         run: |
           cd $GITHUB_WORKSPACE
