--- a/style.yml
+++ b/style.yml
@@ -20,6 +20,7 @@ layers:
   - !!inc/file layers/coastline.yml
   - !!inc/file layers/contour.yml
   - !!inc/file layers/contour-dash.yml
+  - !!inc/file layers/contour-text.yml
   - !!inc/file layers/boundary.yml
   - !!inc/file layers/road.yml
   - !!inc/file layers/pipeline.yml
